[gd_scene load_steps=8 format=3 uid="uid://bjdd44yp5226i"]

[ext_resource type="Script" path="res://scripts/menus/pause_menu.gd" id="1_oefgl"]
[ext_resource type="Theme" uid="uid://dtqnw4yhbe0kk" path="res://assets/fonts/second_title_them.tres" id="2_mad0f"]
[ext_resource type="Theme" uid="uid://cbnl37hp5d4kk" path="res://assets/fonts/button_smaller.tres" id="3_jnra1"]
[ext_resource type="StyleBox" uid="uid://cln15kpjcsiss" path="res://imports/style_box_normal.tres" id="3_qq6wp"]
[ext_resource type="StyleBox" uid="uid://ddmyelf7ggrso" path="res://imports/style_box_hover.tres" id="4_r7ugg"]
[ext_resource type="StyleBox" uid="uid://b3p1lms34esoy" path="res://imports/style_box_click.tres" id="5_vdavg"]

[sub_resource type="Theme" id="Theme_rx576"]
default_font_size = 75

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oefgl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.0588235, 0.0117647, 0.639216)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_rx576")
theme_override_constants/margin_top = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_mad0f")
theme_override_colors/font_color = Color(0.992157, 0.509804, 0.32549, 1)
text = "Pause"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_jnra1")
theme_override_colors/font_color = Color(0.945098, 0.835294, 0.729412, 1)
theme_override_styles/normal = ExtResource("3_qq6wp")
theme_override_styles/hover = ExtResource("4_r7ugg")
theme_override_styles/pressed = ExtResource("5_vdavg")
text = "Resume"

[node name="MainmenuButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_jnra1")
theme_override_colors/font_color = Color(0.945098, 0.835294, 0.729412, 1)
theme_override_styles/normal = ExtResource("3_qq6wp")
theme_override_styles/hover = ExtResource("4_r7ugg")
theme_override_styles/pressed = ExtResource("5_vdavg")
text = "Main Menu"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_jnra1")
theme_override_colors/font_color = Color(0.945098, 0.835294, 0.729412, 1)
theme_override_styles/normal = ExtResource("3_qq6wp")
theme_override_styles/hover = ExtResource("4_r7ugg")
theme_override_styles/pressed = ExtResource("5_vdavg")
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/MainmenuButton" to="." method="_on_mainmenu_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
